@@ -1,7 +1,10 @@
 package com.climb.api.config;
 
 import com.climb.api.service.JwtUtil;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -11,10 +14,12 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
+
+    private static final Logger log = LoggerFactory.getLogger(JwtAuthenticationFilter.class);
 
     private final JwtUtil jwtUtil;
     private static final String BEARER_PREFIX = "Bearer ";
@@ -36,23 +41,25 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
                 if (jwtUtil.validateToken(token)) {
                     String tokenType = jwtUtil.extractTokenType(token);
+                    String email = jwtUtil.extractEmail(token);
 
-                    // Only accept access tokens, not refresh tokens
-                    if ("access".equals(tokenType)) {
-                        final Long userId = jwtUtil.extractUserId(token);
-                        final String email = jwtUtil.extractEmail(token);
-
-                        // Create authentication token
-                        UsernamePasswordAuthenticationToken authenticationToken =
-                                new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
-                        authenticationToken.setDetails(userId);
-
-                        SecurityContextHolder.getContext().setAuthentication(authenticationToken);
+                    if (JwtUtil.TYPE_ACCESS.equals(tokenType)) {
+                        Long userId = jwtUtil.extractUserId(token);
+                        UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
+                                email, null, List.of(new SimpleGrantedAuthority("ROLE_USER")));
+                        auth.setDetails(userId);
+                        SecurityContextHolder.getContext().setAuthentication(auth);
+                    } else if (JwtUtil.TYPE_PENDING_REGISTRATION.equals(tokenType)) {
+                        Long pendingId = jwtUtil.extractPendingId(token);
+                        UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
+                                email, null, List.of(new SimpleGrantedAuthority("ROLE_PENDING_REGISTRATION")));
+                        auth.setDetails(new PendingPrincipal(pendingId));
+                        SecurityContextHolder.getContext().setAuthentication(auth);
                     }
                 }
             }
         } catch (Exception e) {
-            // Log could be added here if needed
+            log.debug("Falha ao processar JWT", e);
         }
 
         filterChain.doFilter(request, response);
